# hayStack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all_elements.umesh  lander-script.sh  magnetic.sh
data/: DTI.cam  DTI.xf  dns-one-eighth.cam  engine.cam  engine.xf  jahmad.cam  jets.cam  jets.xf  kingsnake.cam  kingsnake.xf  lander-small-3.cam  lander-small-3.xf  lander-small-4.cam  lander-small-4.xf  ls-pond.cam  ls.cam  priya.cam  rotstrat-dense.xf  rotstrat-fuzzy.xf  rotstrat.cam  rungholt.cam  thunderstorm.cam  thunderstorm.xf
hayMaker/: CMakeLists.txt  HayMaker.cpp  HayMaker.h  HayStack.cpp  HayStack.h  MPIRenderer.cpp  MPIRenderer.h  Renderer.h
hayStack/: AnariBackend.cpp  AnariBackend.h  BarneyBackend.cpp  BarneyBackend.h  CMakeLists.txt  Capsules.cpp  Capsules.h  ColorMap.cpp  ColorMap.h  Cylinders.cpp  Cylinders.h  DataGroup.cpp  DataGroup.h  DataRank.cpp  DataRank.h  HayMaker.cpp  HayMaker.h  HayStack.cpp  HayStack.h  LocalModel.cpp  LocalModel.h  MPIRenderer.cpp  MPIRenderer.h  MPIWrappers.cpp  MPIWrappers.h  NanoVDB.cpp  NanoVDB.h  NanoVDBVolume.cpp  NanoVDBVolume.h  Renderer.h  Spheres.cpp  Spheres.h  StructuredVolume.cpp  StructuredVolume.h  TAMRVolume.cpp  TAMRVolume.h  TransferFunction.cpp  TransferFunction.h  TriangleMesh.cpp  TriangleMesh.h  (+2 more)
haystack/: CMakeLists.txt  HayStack.cpp  HayStack.h  hsMain.cpp
iw/: engine-8.sh  rotstrat-8.sh
jpg/: make_collages.sh
tools/: CMakeLists.txt  mergeMeshWithScalars.cpp  miniSetMaterial.cpp  miniSplitObjectSpace.cpp  swcMakeBinaries.cpp  tachyParser.cpp  txt2p3.c
viewer/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  HayMaker.cpp  HayMaker.h  Info.plist.in  MPIRenderer.cpp  MPIRenderer.h  Renderer.h  VolumeScatterPanel.cpp  VolumeScatterPanel.h  blender.cpp  main.cpp
viewer/blender/: CMakeLists.txt  renderengine.cpp  renderengine_api.h  renderengine_data.h  renderengine_tcp.cpp  renderengine_tcp.h
viewer/blender/addons/hayStack/: __init__.py  haystack_dll.py  haystack_nodes.py  haystack_pref.py  haystack_process_handler.py  haystack_remote.py  haystack_render.py  haystack_scene.py
viewer/content/: BoxesFromFile.cpp  BoxesFromFile.h  Capsules.cpp  Capsules.h  CylindersFromFile.cpp  CylindersFromFile.h  DGEF.h  DGEFContent.cpp  DGEFContent.h  DistData.h  GESTS.cpp  GESTS.h  IsoDump.cpp  IsoDump.h  MaterialsTest.cpp  MaterialsTest.h  MiniContent.h  NVDBVolumeContent.h  NanoVDBContent.cpp  NanoVDBContent.h  NanoVDBVolumeContent.cpp  NanoVDBVolumeContent.h  OBJContent.cpp  OBJContent.h  RAWVolumeContent.cpp  RAWVolumeContent.h  SiloContent.cpp  SiloContent.h  SpheresFromFile.cpp  SpheresFromFile.h  TAMRContent.cpp  TAMRContent.h  TSTris.cpp  TSTris.h  TriangleMesh.cpp  TriangleMesh.h  UMeshContent.cpp  UMeshContent.h  USD.cpp  USD.h  (+3 more)
viewer/imgui_tfe/: ColorFormat.h  ColorMaps.cpp  ColorMaps.h  Histogram.h  LookupTable.h  RGBAEditor.cpp  RGBAEditor.h  TFEditor.cpp  TFEditor.h  imgui_impl_glfw_gl3.cpp
